[package]
name = "monthly-block-report"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
chrono = "0.4.38"
csv = "1.3.0"
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_path_to_error = "0.1.16"
tokio = { version = "1.41.0", features = ["full"] }
